--- a/Code/Classification/XGBoost/XGBoost_predictions_All_data.ipynb
+++ b/Code/Classification/XGBoost/XGBoost_predictions_All_data.ipynb
@@ -34,10 +34,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "1de05ca6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all test data\n",
+      "          Class                            harmonized_filename  \\\n",
+      "0        Pickup        Pickup_test_orig_test_05620_resized.jpg   \n",
+      "1           SUV           SUV_test_orig_test_08041_resized.jpg   \n",
+      "2   Convertible   Convertible_test_orig_test_00822_resized.jpg   \n",
+      "3   Convertible   Convertible_test_orig_test_00618_resized.jpg   \n",
+      "4        Pickup        Pickup_test_orig_test_05241_resized.jpg   \n",
+      "..          ...                                            ...   \n",
+      "88        Sedan         Sedan_test_orig_test_03443_resized.jpg   \n",
+      "89       Pickup       Pickup_test_orig_train_04088_resized.jpg   \n",
+      "90        Sedan        Sedan_test_orig_train_03673_resized.jpg   \n",
+      "91        Sedan        Sedan_test_orig_train_06616_resized.jpg   \n",
+      "92  Convertible  Convertible_test_orig_train_05861_resized.jpg   \n",
+      "\n",
+      "                                      image_path_blur  \\\n",
+      "0   ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "1   ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
+      "2   ../../../Images/test/Blurred/Convertible_test_...   \n",
+      "3   ../../../Images/test/Blurred/Convertible_test_...   \n",
+      "4   ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "..                                                ...   \n",
+      "88  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
+      "89  ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "90  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
+      "91  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
+      "92  ../../../Images/test/Blurred/Convertible_test_...   \n",
+      "\n",
+      "                                   image_path_no_blur  \\\n",
+      "0   ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
+      "1   ../../../Images/test/No_Blur/SUV_test_orig_tes...   \n",
+      "2   ../../../Images/test/No_Blur/Convertible_test_...   \n",
+      "3   ../../../Images/test/No_Blur/Convertible_test_...   \n",
+      "4   ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
+      "..                                                ...   \n",
+      "88  ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
+      "89  ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
+      "90  ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
+      "91  ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
+      "92  ../../../Images/test/No_Blur/Convertible_test_...   \n",
+      "\n",
+      "    ViT_Embedding_Element_0  ViT_Embedding_Element_1  ViT_Embedding_Element_2  \\\n",
+      "0                 -0.347766                 0.167595                 0.154336   \n",
+      "1                 -0.098150                 0.112476                -0.029927   \n",
+      "2                 -0.203125                 0.251158                -0.324457   \n",
+      "3                 -0.211059                 0.216949                -0.437562   \n",
+      "4                 -0.258407                 0.309153                 0.115703   \n",
+      "..                      ...                      ...                      ...   \n",
+      "88                -0.170689                 0.167469                -0.165911   \n",
+      "89                -0.249416                 0.215597                 0.156529   \n",
+      "90                -0.040393                 0.276296                -0.051275   \n",
+      "91                -0.114089                 0.125190                -0.260922   \n",
+      "92                -0.161454                 0.394140                -0.254677   \n",
+      "\n",
+      "    ViT_Embedding_Element_3  ViT_Embedding_Element_4  ViT_Embedding_Element_5  \\\n",
+      "0                 -0.086329                -0.084096                 0.403538   \n",
+      "1                 -0.390461                 0.041179                 0.271308   \n",
+      "2                 -0.320937                -0.232326                 0.130335   \n",
+      "3                 -0.345737                -0.208970                 0.345806   \n",
+      "4                  0.006585                 0.145539                 0.066159   \n",
+      "..                      ...                      ...                      ...   \n",
+      "88                -0.464237                -0.129780                 0.177970   \n",
+      "89                -0.240929                -0.168694                 0.354225   \n",
+      "90                -0.225824                -0.297258                 0.278150   \n",
+      "91                -0.534182                 0.093819                 0.420588   \n",
+      "92                -0.426034                 0.265536                 0.211613   \n",
+      "\n",
+      "    ...  VGG_Embedding_Element_502  VGG_Embedding_Element_503  \\\n",
+      "0   ...                   0.022588                   1.133375   \n",
+      "1   ...                   0.000000                   0.253053   \n",
+      "2   ...                   0.000000                   0.235702   \n",
+      "3   ...                   0.128199                   0.387812   \n",
+      "4   ...                   0.036451                   0.602885   \n",
+      "..  ...                        ...                        ...   \n",
+      "88  ...                   0.055077                   0.379769   \n",
+      "89  ...                   0.006549                   0.000000   \n",
+      "90  ...                   0.003398                   0.027674   \n",
+      "91  ...                   0.101564                   0.283806   \n",
+      "92  ...                   0.050454                   0.773631   \n",
+      "\n",
+      "    VGG_Embedding_Element_504  VGG_Embedding_Element_505  \\\n",
+      "0                    0.451472                   0.000000   \n",
+      "1                    0.224052                   0.000000   \n",
+      "2                    0.434525                   0.000162   \n",
+      "3                    0.062208                   0.000000   \n",
+      "4                    0.000000                   0.000000   \n",
+      "..                        ...                        ...   \n",
+      "88                   0.151703                   0.000000   \n",
+      "89                   0.485111                   0.000000   \n",
+      "90                   0.026551                   0.000000   \n",
+      "91                   0.220964                   0.000000   \n",
+      "92                   0.412070                   0.000000   \n",
+      "\n",
+      "    VGG_Embedding_Element_506  VGG_Embedding_Element_507  \\\n",
+      "0                    0.047339                   0.154326   \n",
+      "1                    0.000000                   0.000000   \n",
+      "2                    0.000000                   0.170900   \n",
+      "3                    0.000000                   0.136773   \n",
+      "4                    0.000000                   0.035047   \n",
+      "..                        ...                        ...   \n",
+      "88                   0.001070                   0.145830   \n",
+      "89                   0.000000                   0.170164   \n",
+      "90                   0.000000                   0.117652   \n",
+      "91                   0.000000                   0.006836   \n",
+      "92                   0.000000                   0.102131   \n",
+      "\n",
+      "    VGG_Embedding_Element_508  VGG_Embedding_Element_509  \\\n",
+      "0                    0.014707                   0.381150   \n",
+      "1                    0.087972                   0.227599   \n",
+      "2                    0.325055                   0.418985   \n",
+      "3                    0.318834                   0.245252   \n",
+      "4                    0.000000                   0.561562   \n",
+      "..                        ...                        ...   \n",
+      "88                   0.207715                   0.018633   \n",
+      "89                   0.000000                   0.392546   \n",
+      "90                   0.117389                   0.781941   \n",
+      "91                   0.240902                   0.981174   \n",
+      "92                   0.006109                   0.016267   \n",
+      "\n",
+      "    VGG_Embedding_Element_510  VGG_Embedding_Element_511  \n",
+      "0                    0.089064                   0.000000  \n",
+      "1                    0.211084                   0.238225  \n",
+      "2                    0.427169                   0.000000  \n",
+      "3                    1.322474                   0.677609  \n",
+      "4                    0.201122                   0.000000  \n",
+      "..                        ...                        ...  \n",
+      "88                   0.334320                   0.010076  \n",
+      "89                   0.002490                   0.000000  \n",
+      "90                   0.247370                   0.121276  \n",
+      "91                   1.254761                   0.000000  \n",
+      "92                   2.911038                   0.000000  \n",
+      "\n",
+      "[1489 rows x 4893 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "#load test data\n",
     "test_data = combine_directory_parquets('../../../Data/Features/All Features/test')\n",
@@ -50,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "391e9b69",
    "metadata": {},
    "outputs": [],
@@ -61,10 +200,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "0fb91b1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction time in minutes:  0.0010348637898763022\n",
+      "Prediction time per image in minutes:  6.950059032077248e-07\n",
+      "limited cols in test data\n",
+      "added to test data\n",
+      "Predictions made successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "#make predictions\n",
     "make_predictions(test_data, X_test, classifier_name, label_encoder)\n",
@@ -88,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
