--- a/Code/Classification/SVM/SVM_Predictions_Top3_Features.ipynb
+++ b/Code/Classification/SVM/SVM_Predictions_Top3_Features.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Random Forest Classifier Predictions"
+    "# SVM Classifier Predictions"
    ]
   },
   {
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "# Packages\n",
-    "from Random_Forest_Classifier_Functions import *"
+    "from SVM_Classifier_Functions import *"
    ]
   },
   {
@@ -214,31 +214,75 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\sklearn\\base.py:347: InconsistentVersionWarning: Trying to unpickle estimator DecisionTreeClassifier from version 1.4.1.post1 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\sklearn\\base.py:347: InconsistentVersionWarning: Trying to unpickle estimator RandomForestClassifier from version 1.4.1.post1 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best model\n",
-      "RandomForestClassifier(bootstrap=False, max_depth=80, min_samples_leaf=2,\n",
-      "                       n_estimators=500)\n",
-      "predictions head\n",
-      "['Sedan' 'Pickup' 'Sedan' 'SUV' 'Sedan']\n",
-      "prediction time in minutes:  0.003556334972381592\n",
-      "prediction time per image in minutes:  2.388404951230082e-06\n",
-      "saved prediction statistics\n",
-      "limited cols in test data\n",
-      "added to test data\n"
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3553, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_2796\\534560903.py\", line 1, in <module>\n",
+      "    make_predictions(test_data, X_test, classifier_name)\n",
+      "  File \"c:\\Users\\ijyli\\repo\\computer-vision-project\\Code\\Classification\\SVM\\SVM_Classifier_Functions.py\", line 128, in make_predictions\n",
+      "    best_model = joblib.load(output_dir + classifier_name + ' Best Model.joblib')\n",
+      "                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\joblib\\numpy_pickle.py\", line 650, in load\n",
+      "    with open(filename, 'rb') as f:\n",
+      "         ^^^^^^^^^^^^^^^^^^^^\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: '../../../Output/Classifier Fitting/SVM/Top3_Features Best Model.joblib'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2144, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1435, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1326, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1173, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1088, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 970, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "    ^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 792, in lines\n",
+      "    return self._sd.lines\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\stack_data\\core.py\", line 734, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\stack_data\\core.py\", line 677, in included_pieces\n",
+      "    scope_pieces = self.scope_pieces\n",
+      "                   ^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\stack_data\\core.py\", line 614, in scope_pieces\n",
+      "    scope_start, scope_end = self.source.line_range(self.scope)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\stack_data\\core.py\", line 178, in line_range\n",
+      "    return line_range(self.asttext(), node)\n",
+      "                      ^^^^^^^^^^^^\n",
+      "AttributeError: 'Source' object has no attribute 'asttext'\n"
      ]
     }
    ],
@@ -264,11 +308,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.0"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "a7e314ba9f666ce3cc3d9c6ca90df4ff5d73fd085762bb8502c032e8e0761c3b"
-   }
   }
  },
  "nbformat": 4,
