--- a/Code/Classification/XGBoost/XGBoost_predictions_Top3_Features.ipynb
+++ b/Code/Classification/XGBoost/XGBoost_predictions_Top3_Features.ipynb
@@ -42,138 +42,125 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "VGG test data\n",
+      "Top3_Features test data\n",
       "          Class                            harmonized_filename  \\\n",
-      "0           SUV           SUV_test_orig_test_05204_resized.jpg   \n",
-      "1         Sedan         Sedan_test_orig_test_01445_resized.jpg   \n",
-      "2        Pickup        Pickup_test_orig_test_01801_resized.jpg   \n",
-      "3         Sedan        Sedan_test_orig_train_02900_resized.jpg   \n",
-      "4   Convertible  Convertible_test_orig_train_07925_resized.jpg   \n",
+      "0         Sedan        Sedan_test_orig_train_05437_resized.jpg   \n",
+      "1        Pickup       Pickup_test_orig_train_03359_resized.jpg   \n",
+      "2           SUV           SUV_test_orig_test_03954_resized.jpg   \n",
+      "3           SUV           SUV_test_orig_test_06649_resized.jpg   \n",
+      "4         Sedan         Sedan_test_orig_test_06584_resized.jpg   \n",
       "..          ...                                            ...   \n",
-      "88       Pickup        Pickup_test_orig_test_05241_resized.jpg   \n",
-      "89  Convertible  Convertible_test_orig_train_04435_resized.jpg   \n",
-      "90        Sedan         Sedan_test_orig_test_00105_resized.jpg   \n",
-      "91       Pickup        Pickup_test_orig_test_07521_resized.jpg   \n",
-      "92          SUV           SUV_test_orig_test_06507_resized.jpg   \n",
+      "88          SUV           SUV_test_orig_test_01361_resized.jpg   \n",
+      "89        Sedan         Sedan_test_orig_test_01649_resized.jpg   \n",
+      "90  Convertible   Convertible_test_orig_test_07402_resized.jpg   \n",
+      "91  Convertible  Convertible_test_orig_train_06708_resized.jpg   \n",
+      "92  Convertible   Convertible_test_orig_test_07063_resized.jpg   \n",
       "\n",
       "                                      image_path_blur  \\\n",
-      "0   ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
-      "1   ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "2   ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
-      "3   ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "4   ../../../Images/test/Blurred/Convertible_test_...   \n",
+      "0   ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
+      "1   ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "2   ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
+      "3   ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
+      "4   ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
       "..                                                ...   \n",
-      "88  ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
-      "89  ../../../Images/test/Blurred/Convertible_test_...   \n",
-      "90  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "91  ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
-      "92  ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
+      "88  ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
+      "89  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
+      "90  ../../../Images/test/Blurred/Convertible_test_...   \n",
+      "91  ../../../Images/test/Blurred/Convertible_test_...   \n",
+      "92  ../../../Images/test/Blurred/Convertible_test_...   \n",
       "\n",
-      "                                   image_path_no_blur  \\\n",
-      "0   ../../../Images/test/No_Blur/SUV_test_orig_tes...   \n",
-      "1   ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
-      "2   ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
-      "3   ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
-      "4   ../../../Images/test/No_Blur/Convertible_test_...   \n",
-      "..                                                ...   \n",
-      "88  ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
-      "89  ../../../Images/test/No_Blur/Convertible_test_...   \n",
-      "90  ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
-      "91  ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
-      "92  ../../../Images/test/No_Blur/SUV_test_orig_tes...   \n",
+      "                                   image_path_no_blur  HSV_0  HSV_1  HSV_2  \\\n",
+      "0   ../../../Images/test/No_Blur/Sedan_test_orig_t...  20360      0      3   \n",
+      "1   ../../../Images/test/No_Blur/Pickup_test_orig_...  11613      0     12   \n",
+      "2   ../../../Images/test/No_Blur/SUV_test_orig_tes...   1560      8     11   \n",
+      "3   ../../../Images/test/No_Blur/SUV_test_orig_tes...   3389     14    114   \n",
+      "4   ../../../Images/test/No_Blur/Sedan_test_orig_t...   2010     18     22   \n",
+      "..                                                ...    ...    ...    ...   \n",
+      "88  ../../../Images/test/No_Blur/SUV_test_orig_tes...    617     24     17   \n",
+      "89  ../../../Images/test/No_Blur/Sedan_test_orig_t...  13124     34     91   \n",
+      "90  ../../../Images/test/No_Blur/Convertible_test_...   1564      3     17   \n",
+      "91  ../../../Images/test/No_Blur/Convertible_test_...    168      2      1   \n",
+      "92  ../../../Images/test/No_Blur/Convertible_test_...   1965    688    963   \n",
       "\n",
-      "    VGG_Embedding_Element_0  VGG_Embedding_Element_1  VGG_Embedding_Element_2  \\\n",
-      "0                  0.256886                 0.014705                 0.000000   \n",
-      "1                  0.017299                 1.080279                 0.000000   \n",
-      "2                  0.261010                 0.370242                 0.019681   \n",
-      "3                  0.056710                 0.937881                 0.022163   \n",
-      "4                  0.032715                 0.032935                 0.004446   \n",
-      "..                      ...                      ...                      ...   \n",
-      "88                 0.000000                 0.206162                 0.025580   \n",
-      "89                 0.074408                 0.381188                 0.000000   \n",
-      "90                 0.001813                 0.056266                 0.016630   \n",
-      "91                 0.352758                 0.145790                 0.163916   \n",
-      "92                 0.041941                 0.094810                 0.056781   \n",
+      "    HSV_3  HSV_4  HSV_5  ...  VGG_Embedding_Element_502  \\\n",
+      "0       6      4      2  ...                   0.150243   \n",
+      "1      13      2      1  ...                   0.010515   \n",
+      "2      22      5      3  ...                   0.073244   \n",
+      "3     191     34     18  ...                   0.031909   \n",
+      "4    2600      9     13  ...                   0.105276   \n",
+      "..    ...    ...    ...  ...                        ...   \n",
+      "88      8     11     15  ...                   0.054857   \n",
+      "89    985     50     74  ...                   0.099542   \n",
+      "90     33      3      3  ...                   0.242517   \n",
+      "91      3      1      1  ...                   0.034040   \n",
+      "92    720    494   1130  ...                   0.026593   \n",
       "\n",
-      "    VGG_Embedding_Element_3  VGG_Embedding_Element_4  VGG_Embedding_Element_5  \\\n",
-      "0                  0.000000                 0.185725                 0.000000   \n",
-      "1                  0.000000                 0.089484                 0.043215   \n",
-      "2                  0.024617                 0.007864                 0.000000   \n",
-      "3                  0.000000                 0.000000                 0.000000   \n",
-      "4                  0.052438                 0.000000                 0.068364   \n",
-      "..                      ...                      ...                      ...   \n",
-      "88                 0.000000                 0.000000                 0.000000   \n",
-      "89                 0.000000                 0.074578                 0.000000   \n",
-      "90                 0.000000                 0.000000                 0.000000   \n",
-      "91                 0.000000                 0.254776                 0.025853   \n",
-      "92                 0.013747                 0.014368                 0.000000   \n",
-      "\n",
-      "    ...  VGG_Embedding_Element_502  VGG_Embedding_Element_503  \\\n",
-      "0   ...                   0.168325                   0.563752   \n",
-      "1   ...                   0.089265                   0.000000   \n",
-      "2   ...                   0.477338                   0.052425   \n",
-      "3   ...                   0.057768                   0.777413   \n",
-      "4   ...                   0.055057                   0.528111   \n",
-      "..  ...                        ...                        ...   \n",
-      "88  ...                   0.036451                   0.602885   \n",
-      "89  ...                   0.047582                   0.117062   \n",
-      "90  ...                   0.197001                   0.331237   \n",
-      "91  ...                   0.008566                   0.237870   \n",
-      "92  ...                   0.024904                   0.569708   \n",
-      "\n",
-      "    VGG_Embedding_Element_504  VGG_Embedding_Element_505  \\\n",
-      "0                    0.057050                   0.000000   \n",
-      "1                    0.107211                   0.001121   \n",
-      "2                    0.174046                   0.000000   \n",
-      "3                    0.591298                   0.000000   \n",
-      "4                    0.102963                   0.000000   \n",
+      "    VGG_Embedding_Element_503  VGG_Embedding_Element_504  \\\n",
+      "0                    0.264980                   0.352080   \n",
+      "1                    0.935640                   0.440709   \n",
+      "2                    0.000000                   0.510363   \n",
+      "3                    0.000000                   0.122666   \n",
+      "4                    0.000000                   0.301258   \n",
       "..                        ...                        ...   \n",
-      "88                   0.000000                   0.000000   \n",
-      "89                   0.175089                   0.000000   \n",
-      "90                   0.022715                   0.145851   \n",
-      "91                   0.301180                   0.000000   \n",
-      "92                   0.373815                   0.037307   \n",
+      "88                   0.011710                   0.150295   \n",
+      "89                   0.129908                   0.527993   \n",
+      "90                   0.586864                   0.496459   \n",
+      "91                   1.245239                   0.731827   \n",
+      "92                   0.339625                   0.061522   \n",
       "\n",
-      "    VGG_Embedding_Element_506  VGG_Embedding_Element_507  \\\n",
-      "0                    0.000000                   0.214228   \n",
-      "1                    0.000000                   0.124731   \n",
-      "2                    0.000000                   0.388359   \n",
-      "3                    0.000000                   0.036307   \n",
-      "4                    0.000000                   0.048731   \n",
+      "    VGG_Embedding_Element_505  VGG_Embedding_Element_506  \\\n",
+      "0                    0.030870                   0.000000   \n",
+      "1                    0.000000                   0.397143   \n",
+      "2                    0.016521                   0.000000   \n",
+      "3                    0.000000                   0.038126   \n",
+      "4                    0.000000                   0.000000   \n",
       "..                        ...                        ...   \n",
-      "88                   0.000000                   0.035047   \n",
-      "89                   0.000000                   0.000000   \n",
-      "90                   0.000000                   0.164234   \n",
-      "91                   0.000672                   0.242734   \n",
-      "92                   0.008432                   0.023078   \n",
+      "88                   0.000000                   0.008429   \n",
+      "89                   0.013505                   0.000000   \n",
+      "90                   0.000000                   0.000000   \n",
+      "91                   0.000000                   0.000000   \n",
+      "92                   0.017490                   0.000000   \n",
       "\n",
-      "    VGG_Embedding_Element_508  VGG_Embedding_Element_509  \\\n",
-      "0                    0.009949                   0.132087   \n",
-      "1                    0.161692                   1.670775   \n",
-      "2                    0.008709                   0.263208   \n",
-      "3                    0.364919                   0.083522   \n",
-      "4                    0.182427                   0.000009   \n",
+      "    VGG_Embedding_Element_507  VGG_Embedding_Element_508  \\\n",
+      "0                    0.005269                   0.085076   \n",
+      "1                    0.358335                   0.026000   \n",
+      "2                    0.146333                   0.000060   \n",
+      "3                    0.107039                   0.015900   \n",
+      "4                    0.027415                   0.255073   \n",
       "..                        ...                        ...   \n",
-      "88                   0.000000                   0.561562   \n",
-      "89                   0.055792                   0.097906   \n",
-      "90                   0.009297                   0.259832   \n",
-      "91                   0.196190                   0.040980   \n",
-      "92                   0.000000                   0.333420   \n",
+      "88                   0.024524                   0.309261   \n",
+      "89                   0.000000                   0.671070   \n",
+      "90                   0.255278                   0.067638   \n",
+      "91                   0.127707                   0.006418   \n",
+      "92                   0.002405                   0.015634   \n",
       "\n",
-      "    VGG_Embedding_Element_510  VGG_Embedding_Element_511  \n",
-      "0                    0.130220                   0.024219  \n",
-      "1                    0.032121                   0.027089  \n",
-      "2                    0.252122                   0.006022  \n",
-      "3                    0.122601                   0.000000  \n",
-      "4                    2.300909                   0.151730  \n",
-      "..                        ...                        ...  \n",
-      "88                   0.201122                   0.000000  \n",
-      "89                   0.191465                   0.021248  \n",
-      "90                   0.670181                   0.000000  \n",
-      "91                   0.050319                   0.000000  \n",
-      "92                   0.056495                   0.000000  \n",
+      "    VGG_Embedding_Element_509  VGG_Embedding_Element_510  \\\n",
+      "0                    0.184339                   0.393665   \n",
+      "1                    0.439225                   0.561005   \n",
+      "2                    1.518961                   0.189747   \n",
+      "3                    0.521024                   0.037165   \n",
+      "4                    0.399262                   0.089734   \n",
+      "..                        ...                        ...   \n",
+      "88                   0.000000                   0.121847   \n",
+      "89                   0.071508                   0.178081   \n",
+      "90                   0.000000                   0.732926   \n",
+      "91                   0.175328                   0.619127   \n",
+      "92                   0.608576                   0.651216   \n",
       "\n",
-      "[1489 rows x 516 columns]\n"
+      "    VGG_Embedding_Element_511  \n",
+      "0                    0.048444  \n",
+      "1                    0.136741  \n",
+      "2                    0.162572  \n",
+      "3                    0.036494  \n",
+      "4                    0.010790  \n",
+      "..                        ...  \n",
+      "88                   0.045280  \n",
+      "89                   0.044341  \n",
+      "90                   0.000000  \n",
+      "91                   0.012838  \n",
+      "92                   0.207761  \n",
+      "\n",
+      "[1489 rows x 1309 columns]\n"
      ]
     }
    ],
@@ -208,8 +195,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction time in minutes:  0.00018668969472249348\n",
-      "Prediction time per image in minutes:  1.2537924427299765e-07\n",
+      "Prediction time in minutes:  0.0005675911903381348\n",
+      "Prediction time per image in minutes:  3.8118951668108445e-07\n",
       "limited cols in test data\n",
       "added to test data\n",
       "Predictions made successfully.\n"
@@ -239,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
